--- a/app.json
+++ b/app.json
@@ -18,15 +18,15 @@
     "website": "https://github.com/Cyniteofficial/Auto-Filter-V5",
     "repository": "https://github.com/Cyniteofficial/Auto-Filter-V5",
     "env": {
-        "BOT_TOKEN": {
+        "BOT_TOKEN": {5607614423:AAFZuyGXf17AVbHcVzc9lMJVqN4hIbfrSnM
             "description": "Your bot token.",
             "required": true
         },
-        "API_ID": {
+        "API_ID": {21649383
             "description": "Get this value from https://my.telegram.org",
             "required": true
         },
-        "API_HASH": {
+        "API_HASH": {de554b83f6308dfcb7e48fecc7384b08
             "description": "Get this value from https://my.telegram.org",
             "required": true
         },
